<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorPrimary"
    android:padding="50dp">

    <ImageView
        android:layout_width="208dp"
        android:layout_height="203dp"
        android:layout_below="@id/txtWelcomeAppName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/txtWelcomeAppName"
        android:layout_width="151dp"
        android:layout_height="84dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="38sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/btnWelcomeLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/i_have_account"
        android:background="@android:color/white"
        android:layout_above="@+id/btnWelcomeRegister"
        android:layout_marginBottom="25dp"/>

    <Button
        android:id="@+id/btnWelcomeRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:background="@android:color/white"
        android:text="@string/create_new_account"
        android:textSize="14sp"
        android:textStyle="bold" />



</RelativeLayout>